--- a/projeto_tcc/src/main/webapp/paginas/cadastroDocente.xhtml
+++ b/projeto_tcc/src/main/webapp/paginas/cadastroDocente.xhtml
@@ -7,12 +7,11 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-	<h:head>
-	</h:head>
-	<h:body>
-		<h:outputText value="Olá Mundo!!!"/>
-		<p:spinner/>
-	</h:body>
-
-
+<ui:composition template="/layout.xhtml">
+	<ui:define name="title">Cadastro</ui:define>
+	
+	<ui:define name="body">
+	    Cadastro Docente
+	</ui:define>
+</ui:composition>
 </html>
