Resolvendo conflito da CadastroDiscente

--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -22,10 +22,10 @@
     <p:growl id="messages"/>
  
     <p:menubar>
-        <p:menuitem value="Inicio" url="paginas/index.jsf" icon="ui-icon-document" />
-      	<p:menuitem value="Calendário" url="paginas/calendario.jsf" icon="ui-icon-pencil" />
-      	<p:menuitem value="Cadastro de Discente" url="paginas/cadastroDiscente.jsf" icon="ui-icon-document" />
-      	<p:menuitem value="Cadastro de Docente" url="paginas/cadastroDocente.jsf" icon="ui-icon-document" />
+        <p:menuitem value="Inicio" url="/paginas/index.jsf" icon="ui-icon-document" />
+      	<p:menuitem value="Calendário" url="/paginas/calendario.jsf" icon="ui-icon-pencil" />
+      	<p:menuitem value="Cadastro de Discente" url="/paginas/cadastroDiscente.jsf" icon="ui-icon-document" />
+      	<p:menuitem value="Cadastro de Docente" url="/paginas/cadastroDocente.jsf" icon="ui-icon-document" />
  
         <f:facet name="options">
             <p:inputText style="margin-right:10px" placeholder="Buscar"/>
