--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -1,49 +1,71 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-          
+
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui" >
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
-  <title><ui:insert name="title">Default title</ui:insert></title>
-  
-  <!--  IMPORT DOS ARQUIVOS CSS -->
-  <link type="text/css" rel="stylesheet" href="style/style.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"  />
+	<title><ui:insert name="title">Default title</ui:insert></title>
+
+	<!--  IMPORT DOS ARQUIVOS CSS -->
+	<link type="text/css" rel="stylesheet" href="style/style.css" />
+	<link rel="stylesheet"
+		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 </h:head>
 
 
 <h:body>
 
- <div class="cabecalho">
- 	<h:form>  
-    <p:growl id="messages"/>
- 
-    <p:menubar>
-        <p:menuitem value="Inicio" url="/paginas/index.jsf" icon="ui-icon-document" />
-      	<p:menuitem value="Calendário" url="/paginas/calendario.jsf" icon="ui-icon-pencil" />
-      	<p:menuitem value="Cadastro de Discente" url="/paginas/cadastroDiscente.jsf" icon="ui-icon-document" />
-      	<p:menuitem value="Cadastro de Docente" url="/paginas/cadastroDocente.jsf" icon="ui-icon-document" />
- 
-        <f:facet name="options">
-            <p:inputText style="margin-right:10px" placeholder="Buscar"/>
-            <p:commandButton type="button" value="Sair"  icon="ui-icon-extlink" />
-        </f:facet>
-    </p:menubar>
-</h:form>
- </div>
- 
-  <ui:insert name="body">
-  		<div class="container">
-  			<h1 class="alert-danger">Não foi inserido nada no body</h1>
-  		</div>
-  </ui:insert>
-  
-  
- <!-- IMPORT DOS ARQUIVOS JS -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<div class="cabecalho">
+		<h:form>
+			<p:growl id="messages" />
+
+			<p:menubar>
+				<p:menuitem value="Inicio" url="/paginas/index.jsf"
+					icon="ui-icon-document" />
+				<p:menuitem value="Calendário" url="/paginas/calendario.jsf"
+					icon="ui-icon-pencil" />
+				<p:submenu label="Cadastros" icon="ui-icon-document">
+					<p:menuitem value="Discente" url="/paginas/cadastroDiscente.jsf"/>
+					<p:menuitem value="Docente" url="/paginas/cadastroDocente.jsf" />
+					<p:menuitem value="TCC" url="/paginas/add_tcc.jsf" />
+				</p:submenu>
+
+				<p:menuitem value="Defesas" url="/defesa/manterDefesa.jsf"
+					icon="ui-icon-document" />
+
+				<f:facet name="options">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="dropdown"><a href="#" class="dropdown-toggle"
+							data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false"> <h:outputText
+									value="#{loginBean.usuarioLogado.nome} " /> <h:outputText
+									value="(#{loginBean.usuarioLogado.perfil})" /> <span
+								class="caret"></span>
+						</a>
+							<ul class="dropdown-menu">
+								<li><h:commandLink action="#{loginBean.logout}">
+										<i class="glyphicon glyphicon-log-out"> </i> Sair
+									</h:commandLink></li>
+							</ul></li>
+					</ul>
+				</f:facet>
+			</p:menubar>
+		</h:form>
+	</div>
+
+	<ui:insert name="body">
+		<div class="container">
+			<h1 class="alert-danger">Não foi inserido nada no body</h1>
+		</div>
+	</ui:insert>
+
+
+	<!-- IMPORT DOS ARQUIVOS JS -->
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </h:body>
 
