--- a/projeto_tcc/src/main/webapp/defesa/manterDefesa.xhtml
+++ b/projeto_tcc/src/main/webapp/defesa/manterDefesa.xhtml
@@ -13,6 +13,7 @@
 	<ui:define name="body">
 		<p:panel header="Defesas" id="painelDefesa">
 		<p:panel header="TCC's" id="listaTCC">
+				<p:button  value="Cadastrar TCC"/>
 				<p:dataTable var="tcc" value="#{manterDefesaBean.tccLista}" emptyMessage="Nenhuma TCC cadastrado">
 					<p:column headerText="Título" >
 						<h:outputText value="#{tcc.titulo}"/>
@@ -23,16 +24,18 @@
 					<p:column headerText="Orientador">
 						<h:outputText value="#{tcc.orientador.usuario.nome}"/>
 					</p:column>
-					<p:column headerText="Tipo" >
-						<h:outputText value="#{tcc.tipo}"/>
+					<p:column headerText="Tipo">
+						<h:outputText value="#{tcc.tipo}" />
 					</p:column>
-					<p:column headerText="Defesa" style="width:5%;">
-						<h:link styleClass="glyphicon glyphicon-plus"/>
+					<p:column headerText="Ações" style="width:5%;">
+						<h:form>
+							<h:commandLink title="Agendar Defesa" actionListener="#{incluirEditarDefesaBean.carregaTcc(tcc)}"
+							 action="incluirEditarDefesa" styleClass="glyphicon glyphicon-plus"  />
+						</h:form>
 					</p:column>
-					
 				</p:dataTable>
 			</p:panel>
-			<p:button  value="Cadastrar"/>
+			
 			<p:panel header="Lista de defesas" id="listaDefesas">
 				<p:dataTable emptyMessage="Nenhuma defesa cadastrada ou agendada">
 					<p:column headerText="Defesa" />
