--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -39,7 +39,7 @@
 				<p:submenu label="Cadastros" icon="ui-icon-document">
 					<p:menuitem value="Discente" url="/paginas/cadastroDiscente.jsf" />
 					<p:menuitem value="Docente" url="/paginas/cadastroDocente.jsf" />
-					<p:menuitem value="TCC" url="/tcc/index_tcc.jsf" />
+					<p:menuitem value="TCC" url="/tcc/indexTcc.jsf" />
 				</p:submenu>
 
 				<p:menuitem value="Defesas" url="/defesa/manterDefesa.jsf"
