--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -20,6 +20,67 @@
 		.ui-panelgrid td, .ui-panelgrid tr{
   			  border-style: none !important
 		}
+		
+		.barra-menu{
+			background: #00cdcf !important;
+		}
+		
+		.item-menu{
+			color: #ffffff !important;
+			margin-right: 20px !important;
+			font-size: 20px;
+		}
+		
+		.ui-menuitem-text{
+			color: #ffffff !important;
+			margin-right: 20px !important;
+			font-size: 20px;
+		}
+		
+		.nome-usuario{
+			color: #ffffff !important;
+		}
+		
+		.nome-usuario a:hover{
+			background-color: transparent !important;
+		}
+		
+		.panel-title-h1{
+			font-size: 30px !important;
+			margin-left: 15px;
+			color: #009a9c !important;
+		}
+		.ui-widget-header{
+			background-color: transparent !important;
+			border: none;
+		}
+		
+		.ui-panel-title{
+			font-size: 25px !important;
+			color: #009a9c !important;
+		}
+		
+		.ui-button{
+			background: #009a9c !important;
+			text-shadow: none !important;
+			border: none !important;
+			padding: 5px !important;
+			color: #ffffff !important;
+		}
+		
+		.ui-widget-content{
+			border: none !important;
+		}
+		
+		.container-padding{
+			padding-left: 20px;
+		}
+		
+		ul.ui-picklist-list:nth-child(2){
+			border: 2px solid #009a9c !important;
+			margin-left: 45px;
+		}
+		
 	</style>
 	
 </h:head>
@@ -31,23 +92,20 @@
 		<h:form>
 			<p:growl id="messages" />
 
-			<p:menubar>
-				<p:menuitem value="Inicio" url="/paginas/index.jsf"
-					icon="ui-icon-document" />
-				<p:menuitem value="Calendário" url="/paginas/calendario.jsf"
-					icon="ui-icon-pencil" />
-				<p:submenu label="Cadastros" icon="ui-icon-document">
-					<p:menuitem value="Discente" url="/paginas/cadastroDiscente.jsf" />
-					<p:menuitem value="Docente" url="/paginas/cadastroDocente.jsf" />
+			<p:menubar styleClass="barra-menu">
+				<p:menuitem value="Inicio" url="/paginas/index.jsf" styleClass="item-menu" />
+				<p:menuitem value="Calendário" url="/paginas/calendario.jsf" styleClass="item-menu" />
+				<p:submenu label="Cadastros" styleClass="item-menu">
+					<p:menuitem value="Discente" url="/paginas/cadastroDiscente.jsf"/>
+					<p:menuitem value="Docente" url="/paginas/cadastroDocente.jsf"/>
 					<p:menuitem value="TCC" url="/tcc/indexTcc.jsf" />
 				</p:submenu>
 
-				<p:menuitem value="Defesas" url="/defesa/manterDefesa.jsf"
-					icon="ui-icon-document" />
+				<p:menuitem value="Defesas" url="/defesa/manterDefesa.jsf" styleClass="item-menu" />
 
 				<f:facet name="options">
 					<ul class="nav navbar-nav navbar-right">
-						<li class="dropdown"><a href="#" class="dropdown-toggle"
+						<li class="dropdown nome-usuario"><a href="#" class="dropdown-toggle nome-usuario"
 							data-toggle="dropdown" role="button" aria-haspopup="true"
 							aria-expanded="false"> <h:outputText
 									value="#{loginBean.usuarioLogado.nome} " /> <h:outputText
