--- a/projeto_tcc/src/main/webapp/paginas/cadastroDiscente.xhtml
+++ b/projeto_tcc/src/main/webapp/paginas/cadastroDiscente.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/layout.xhtml">
+<ui:composition template="../layout.xhtml">
 	<ui:define name="title">Cadastro</ui:define>
 	
 	<ui:define name="body">
