--- a/projeto_tcc/src/main/webapp/tcc/indexTcc.xhtml
+++ b/projeto_tcc/src/main/webapp/tcc/indexTcc.xhtml
@@ -12,7 +12,7 @@
 	<ui:define name="title">Tcc</ui:define>
 
 	<ui:define name="body">
-		<h1> DEFESAS TCC EM 2017.1</h1>
+		<h1 class="panel-title-h1"> DEFESAS TCC EM 2017.1</h1>
 		<p:panel header="Filtrar">
 				<h:form id="formBuscaTcc">
 					<h:panelGrid columns="2" border="0">
