--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -49,6 +49,7 @@
 			font-size: 30px !important;
 			margin-left: 15px;
 			color: #009a9c !important;
+			text-transform: uppercase;
 		}
 		.ui-widget-header{
 			background-color: transparent !important;
