--- a/projeto_tcc/src/main/webapp/tcc/incluirTcc.xhtml
+++ b/projeto_tcc/src/main/webapp/tcc/incluirTcc.xhtml
@@ -16,7 +16,7 @@
 
 	<ui:define name="body">
 		<div class="container-padding">
-			<h1>Novo TCC</h1>
+			<h1 class="panel-title-h1">Novo TCC</h1>
 			<h:form>
 				<p:panelGrid columns="4" styleClass="bordernone table-hover">
 					<h:outputLabel>Tipo:</h:outputLabel>
