--- a/projeto_tcc/src/main/webapp/login.xhtml
+++ b/projeto_tcc/src/main/webapp/login.xhtml
@@ -11,7 +11,8 @@
 	<title>Agendamento de TCC's - Login</title>
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"  />
-	<link type="text/css" rel="stylesheet" href="style/login.css" />
+<!-- 	<link type="text/css" rel="stylesheet" href="style/login.css" /> -->
+	<h:outputStylesheet library="style" name="login.css" target="head" />
 </h:head>
 <h:body>
 
