--- a/projeto_tcc/src/main/webapp/layout.xhtml
+++ b/projeto_tcc/src/main/webapp/layout.xhtml
@@ -29,8 +29,8 @@
 				<p:menuitem value="Inicio" url="/paginas/index.jsf" styleClass="item-menu" />
 				<p:menuitem value="Calendário" url="/paginas/calendario.jsf" styleClass="item-menu" />
 				<p:submenu label="Cadastros" styleClass="item-menu">
-					<p:menuitem value="Discente" url="/paginas/cadastroDiscente.jsf"/>
-					<p:menuitem value="Docente" url="/paginas/cadastroDocente.jsf"/>
+					<p:menuitem value="Discente" url="/discente/listarDiscentes.jsf"/>
+					<p:menuitem value="Docente" url="/docente/listarDocentes.jsf"/>
 					<p:menuitem value="TCC" url="/tcc/indexTcc.jsf" />
 				</p:submenu>
 
