--- a/projeto_tcc/src/main/webapp/discente/cadastroDiscente.xhtml
+++ b/projeto_tcc/src/main/webapp/discente/cadastroDiscente.xhtml
@@ -7,14 +7,11 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-<ui:composition template="/templates/template.xhtml">
+<ui:composition template="/layout.xhtml">
 	<ui:define name="title">Cadastro Discente</ui:define>
 	
-	<ui:define name="header">
-		<ui:include src="/templates/headerBase.xhtml"/>
-	</ui:define>
 	
-	<ui:define name="content">
+	<ui:define name="body">
 	
 	<h:messages />
 	
