--- a/projeto_tcc/src/main/webapp/discente/listarDiscentes.xhtml
+++ b/projeto_tcc/src/main/webapp/discente/listarDiscentes.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/layout.xhtml">
 	<ui:define name="title">Lista de Discentes</ui:define>
@@ -14,45 +15,38 @@
 	</f:metadata>
 	
 	<ui:define name="body">
-	<h:form id="formContentListaarDiscente">
-	    <h:dataTable value="#{beanDiscente.listaDiscentes}" var="discente" rowClasses="blueRow, greenRow"
-	    cellpadding="5" cellspacing="1" border="1">
-	    <h:column>
-	    	<f:facet name="header">Nome</f:facet>
-	    	<h:commandLink id="linkNome" name="linkNome" value="#{discente.usuario.nome}"  action="#{beanDiscente.editarDiscente}">
-	    		<f:setPropertyActionListener value="#{discente.id}" target="#{beanDiscente.id}"/>
-	    	</h:commandLink>
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">Email</f:facet>
-	    	#{discente.usuario.email}
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">Telefone</f:facet>
-	    	#{discente.usuario.telefone}
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">Matricula</f:facet>
-	    	#{discente.usuario.matricula}
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">Curso</f:facet>
-	    	#{discente.curso}
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">Periodo</f:facet>
-	    	#{discente.periodo}
-	    </h:column>
-	    <h:column>
-	    	<f:facet name="header">#</f:facet>
-	    	<h:commandLink value="excluir" action="#{beanDiscente.excluir}">
-	    		<f:setPropertyActionListener value="#{discente.id}" target="#{beanDiscente.id}"/>
-	    	</h:commandLink>
-	    </h:column>
-	    </h:dataTable><br/><br/>
-	    
-	    <h:commandButton value="Novo Cadastro" action="/discente/cadastroDiscente?faces-redirect=true"/><br/><br/>
-	</h:form>
+	<p:panel header="Discentes" id="listaTCC">
+		<p:commandButton value="Novo Cadastro" action="/discente/cadastroDiscente?faces-redirect=true"/><br/><br/>
+		<h:form id="formContentListaarDiscentePrime">
+			<p:dataTable var="discente" value="#{beanDiscente.listaDiscentes}" >
+				<p:column headerText="Nome" >
+					<p:commandLink id="linkNome" name="linkNome" value="#{discente.usuario.nome}"  action="#{beanDiscente.editarDiscente}">
+			    		<f:setPropertyActionListener value="#{discente.id}" target="#{beanDiscente.id}"/>
+			    	</p:commandLink>
+				</p:column>
+				<p:column headerText="Email">
+					<h:outputText value="#{discente.usuario.email}"/>
+				</p:column>
+				<p:column headerText="Telefone">
+					<h:outputText value="#{discente.usuario.telefone}"/>
+				</p:column>
+				<p:column headerText="Matricula">
+					<h:outputText value="#{discente.usuario.matricula}" />
+				</p:column>
+				<p:column headerText="Curso">
+					<h:outputText value="#{discente.curso}" />
+				</p:column>
+				<p:column headerText="Periodo">
+					<h:outputText value="#{discente.periodo}" />
+				</p:column>
+				<p:column headerText="#">
+					<p:commandLink value="excluir" action="#{beanDiscente.excluir}">
+			    		<f:setPropertyActionListener value="#{discente.id}" target="#{beanDiscente.id}"/>
+			    	</p:commandLink>
+				</p:column>
+			</p:dataTable>
+		</h:form>
+	</p:panel>
 	</ui:define>
 	<ui:define name="footer">
 	    <ui:include src="/templates/footerBase.xhtml"/>
